[gd_scene load_steps=17 format=2]

[ext_resource path="res://reliquia_godot_azulito_ojos_cuadrados.png" type="Texture" id=1]
[ext_resource path="res://puzzle_minigame/drag_and_drop.gd" type="Script" id=2]
[ext_resource path="res://test_tileset.png" type="Texture" id=3]
[ext_resource path="res://puzzle_minigame/destino.gd" type="Script" id=4]
[ext_resource path="res://puzzle_minigame/piezas_puzle/pieza_3.png" type="Texture" id=5]
[ext_resource path="res://puzzle_minigame/piezas_puzle/pieza_6.png" type="Texture" id=6]
[ext_resource path="res://puzzle_minigame/piezas_puzle/pieza_2.png" type="Texture" id=7]
[ext_resource path="res://puzzle_minigame/piezas_puzle/pieza_1.png" type="Texture" id=8]
[ext_resource path="res://puzzle_minigame/piezas_puzle/pieza_4.png" type="Texture" id=9]
[ext_resource path="res://puzzle_minigame/piezas_puzle/pieza_5.png" type="Texture" id=10]
[ext_resource path="res://puzzle_minigame/piezas_puzle/pieza_8.png" type="Texture" id=11]
[ext_resource path="res://puzzle_minigame/piezas_puzle/pieza_7.png" type="Texture" id=12]
[ext_resource path="res://puzzle_minigame/piezas_puzle/pieza_9.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2.5, 3 )

[node name="Node2D" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 82.2757, 1.11876 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Area2D"]
scale = Vector2( 1, 0.748646 )
texture = ExtResource( 3 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 24, 24 )
shape = SubResource( 1 )

[node name="piezas" type="KinematicBody2D" parent="."]
position = Vector2( 29.4071, 8.22861 )
input_pickable = true
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="piezas"]
shape = SubResource( 2 )

[node name="reliquia_godot_azulito_ojos_cuadrados" type="Sprite" parent="piezas"]
texture = ExtResource( 1 )

[node name="pieza_1" type="Sprite" parent="."]
texture = ExtResource( 8 )
centered = false

[node name="Area2D2" type="Area2D" parent="pieza_1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pieza_1/Area2D2"]
position = Vector2( 2.5, 3 )
shape = SubResource( 3 )

[node name="pieza_2" type="Sprite" parent="."]
position = Vector2( 5, 0 )
texture = ExtResource( 7 )
centered = false

[node name="pieza_3" type="Sprite" parent="."]
position = Vector2( 11, 0 )
texture = ExtResource( 5 )
centered = false

[node name="pieza_4" type="Sprite" parent="."]
position = Vector2( 0, 6 )
texture = ExtResource( 9 )
centered = false

[node name="pieza_5" type="Sprite" parent="."]
position = Vector2( 5, 6 )
texture = ExtResource( 10 )
centered = false

[node name="pieza_6" type="Sprite" parent="."]
position = Vector2( 11, 6 )
texture = ExtResource( 6 )
centered = false

[node name="pieza_7" type="Sprite" parent="."]
position = Vector2( 0, 11 )
texture = ExtResource( 12 )
centered = false

[node name="pieza_8" type="Sprite" parent="."]
position = Vector2( 5, 11 )
texture = ExtResource( 11 )
centered = false

[node name="pieza_9" type="Sprite" parent="."]
position = Vector2( 11, 11 )
texture = ExtResource( 13 )
centered = false
[connection signal="body_entered" from="Area2D" to="piezas" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="piezas" method="_on_Area2D_body_exited"]
[connection signal="input_event" from="piezas" to="piezas" method="_on_StaticBody2D_input_event"]
